# clinical-mcp-server

./: .env.example  .gitignore  DECISIONS.md  README.it.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: claude_desktop_config.json
scripts/: generate_synthetic_data.py
src/clinical_mcp/: __init__.py  __main__.py  audit.py  config.py  data_access.py  models.py  policy.py  rag_client.py  server.py
tests/: test_audit.py  test_data_access.py  test_policy.py
